--- a/index.html
+++ b/index.html
@@ -1,7 +1,16 @@
 <!DOCTYPE html>
 <html>
 <body>
+<style>
+  h1 {
+text-align: center;
+font-family: "Roboto", "sans-serif";
+}
 
+button {
+font-family: "Roboto", "sans-serif";
+}
+  </style>
 <h1>Verification</h1>
 
 <p>Click the "verify" button to verify.</p>
