--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ text-align: center;
 font-family: "Roboto", "sans-serif";
 }
 
-button {
+p {
+  text-align: center;
 font-family: "Roboto", "sans-serif";
 }
   </style>
